[package]
name = "ah-yes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["make", "util"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
